objects/Nebula__LogScenarioRule__mdt.object
<CustomObject>
    <fields>
        <fullName>Nebula__IsEnabled__c</fullName>
        <complianceGroup>None</complianceGroup>
        <defaultValue>true</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__NumberOfDaysToRetainLogs__c</fullName>
        <complianceGroup>None</complianceGroup>
        <inlineHelpText>This value is used to set the field Log__c.LogRetentionDate__c, which is then used by LogBatchPurger to delete old logs. To keep logs indefinitely, set this field to a blank value (null).</inlineHelpText>
        <label>Days to Retain Logs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__Scenario__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>Scenario</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nebula__UserLoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <inlineHelpText>Overrides the user&apos;s logging level (normally controlled via LoggerSettings__c.LoggingLevel__c) for any transactions with the specified Scenario</inlineHelpText>
        <label>User Logging Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>FINE</fullName>
                </value>
                <value>
                    <fullName>FINER</fullName>
                </value>
                <value>
                    <fullName>FINEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Scenario Rule</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Nebula__IsEnabled__c</columns>
        <columns>Nebula__Scenario__c</columns>
        <columns>Nebula__UserLoggingLevel__c</columns>
        <columns>Nebula__NumberOfDaysToRetainLogs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Log Scenario Rules</pluralLabel>
</CustomObject>